2011-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/Makefile.am: remove unused code: ttable.c
	* src/frontend/ttable.c: remove unused file.
	* src/frontend/common.h: remove declarations of functions defined
	in ttable.c; remove declaration of unused variable: HashTab[].
	* src/frontend/pgn.c: remove unused code: call to TTClear();
	* src/main.cc: removed unused code: references to HashTab[].

2011-04-27  Antonio Ceballos  <aceballos@gmail.com>

	* INSTALL: typo in book file name.

2011-04-24  Antonio Ceballos  <aceballos@gmail.com>

	* AUTHORS: correct e-mail address.
	* Makefile.am: iq6.epd removed from distribution.
	* test/: new directory, for test suites.
	* test/iq6.epd: moved from .
	* test/endgame.epd: new file, copied from CVS.
	* test/BT2630.epd: new file, copied from CVS.
	* test/README: new file, for the record of test executions.

2011-04-18  Antonio Ceballos  <aceballos@gmail.com>

	* ChangeLog: changes taking v5.9.91 as first version.
	* NEWS: reorganized.
	* TODO: reorganized.
	* configure.ac: doc/Makefile included.
	* Makefile.am: doc subdir added; doc/README* removed.
	* doc/quotes.rb: new file, removes extra quotes in book source file.
	* doc/README: deleted, replaced by texinfo file.
	* doc/README_adapter: deleted, replaced by texinfo file.
	* doc/README_engine: deleted, replaced by texinfo file.
	* doc/README_engine_technical: deleted, replaced by texinfo file.
	* doc/Makefile.am: new file, builds info file.
	* doc/gnuchess.texi: new file, replaces all previous doc/README*.
	* doc/fdl.texi: new file, required to build info file: license.
	* doc/version.texi: new file, required to build info file: version.
	* src/gnuchessx: new file (was in v5), script to run in xboard mode.
	* src/gnuchessu: new file, script to run in UCI mode.
	* src/Makefile.am: gnuchessx and gnuchessu added to bin_SCRIPTS.
	* src/gnuchess.ini: no log file by default.
	* src/main.cc: add v5 options: manual, easy, post, memory N; 
	remove v5 options: hashsize N